--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "openai": "^4.77.0",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "vercel": "^50.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
