fix dupe action verb and due date

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Second Brain",
-  "short_name": "Second Brain",
+  "name": "Cynthia",
+  "short_name": "Cynthia",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
